--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -86,7 +86,7 @@
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            欢迎你，<span class="hidden-xs">${session.admin.userName}</span>
+                            欢迎你，<span class="hidden-xs">${session.admin.roleId}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-footer">
