--- a/src/main/resources/templates/homePage1.html
+++ b/src/main/resources/templates/homePage1.html
@@ -50,7 +50,7 @@
                 confirmBgColor: '#ff1d31',
                 success: function (res) {
                     if (res.confirm) {
-                        window.location.href = "/userController/logOut"
+                        window.location.href = "/userLogin/logOut"
                     } else {
 
                     }
@@ -101,7 +101,7 @@
                     <!-- User Account: style can be found in dropdown.less -->
                     <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            欢迎你，<span class="hidden-xs">${session.admin.userName}</span>
+                            欢迎你，<span class="hidden-xs">[[${session.admin.userPhone}]]</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-footer">
