--- a/src/main/resources/templates/statistics/statisticsShadow.html
+++ b/src/main/resources/templates/statistics/statisticsShadow.html
@@ -37,12 +37,6 @@
             $scope.area=function () {
                 var provinceId=$scope.userOut.userProvince;
                 var cityId=$scope.personal.userCity;
-                console.log(cityId)
-                if (cityId==""){
-                    $scope.personal.userArea="";
-                    $scope.personal.censusVill="";
-                }
-                $scope.allTown={};
 
                 $http({
                     url: "/Province/findCounty",
@@ -82,11 +76,11 @@
             }
 
             $scope.findOutsider=function(){
-                var userOutsi=$scope.personal;
+                var userOut=$scope.personal;
                 $http({
                     url:"/statistics/findOutsider",
                     method:"get",
-                    params:{userOutsi}
+                    params:{userOut}
                 }).success(function (response) {
                     $scope.outSide=response;
                 })
@@ -99,57 +93,16 @@
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
         $(document).ready(function() {
-            $('button').click(function () {
-                var addform = $("#addForm").serialize();
-                console.log(addform)
-                $.ajax({
-                    url: "/statistics/findOutsider",
-                    dataType: "json",
-                    type: "post",
-                    data: addform,
-                    success: function (res) {
-                        console.log("res:"+res)
-                        var name=[];
-                        var date=[]
-                        for (var i = 0; i < res.length; i++) {
-                            name.push(res[i].site)
-                            date.push(res[i].outnumber)
-                        }
-                        //获取数据后，隐藏loading动画
-                        myContainer.setOption(option = {
-                            title: {
-                                text: ''
-                            },
-                            tooltip: {},
-                            legend: {},
-                            // xAxis代表x轴的数据
-                            xAxis: {
-                                data: name,
-                                // 字段对应从json里面的字段
-                            },
-                            // yAxis代表y轴的数据,不写会自动适应数据
-                            yAxis: {},
-                            // series代表鼠标悬浮到图标上时提示的对应信息
-                            series: [{
-                                name: '流入人口人数',
-                                type: 'bar',
-                                data: date,
-                                // 字段对应从json里面的字段
-                            }]
-                        });
-                    }
-                })
-            });
             var myContainer = echarts.init(document.getElementById('main'));
-                var addform = $("#addForm").serialize();
-                $.ajax({
-                    url: "/statistics/findOutsider",
-                    dataType: "json",
-                    type: "post",
-                    data: addform,
-                    success: function (res) {
+            // var myContainer = echarts.init(myChart);
+            function bindData() {
+                //为了效果明显，我们做了延迟读取数据
+                setTimeout(function() {
+                    //异步加载数据,get请求我们刚刚准备的json文件,正式开发中调用相应的接口
+                    $.get('/statistics/findOutsider', function(res) {
+
                         console.log("res:"+res)
-                        var name=[];
+                       var name=[];
                         var date=[]
                         for (var i = 0; i < res.length; i++) {
                             name.push(res[i].site)
@@ -158,7 +111,7 @@
                         //获取数据后，隐藏loading动画
                         myContainer.setOption(option = {
                             title: {
-                                text: ''
+                                text: 'echartsLoading加载'
                             },
                             tooltip: {},
                             legend: {},
@@ -177,8 +130,12 @@
                                 // 字段对应从json里面的字段
                             }]
                         });
-                    }
-                })
+                    })
+                }, 0)
+            }
+            bindData();
+            // 使用刚指定的配置项和数据显示图表。
+            // myChart.setOption(option);
         })
     </script>
 </head>
@@ -188,34 +145,30 @@
         <h2>流动人口服务管理系统</h2>
 
 </div>
-<form id="addForm">
 <div align="center">
-从<input type="date" ng-model="personal.gmtCreate" name="gmtCreate"> 到<input type="date" name="gmtModifile" ng-model="personal.gmtModifile">
-    <button>搜索</button>
+从<input type="date" ng-model="personal.gmtCreate"> 到<input type="date" ng-model="personal.gmtModifile">
+    <button onclick="bindData()">搜索</button>
     <br>
     <div class="form_text_ipt">
         区域:
-    <select style="width: 95px; height: 40px" ng-change="area()" ng-model="personal.userCity" name="userCity">
-        <option value="">请选择</option>
-        <option ng-repeat="pr in usCity"  ng-value="pr.id" >{{pr.name}}</option>
+    <select style="width: 95px; height: 40px" ng-click="area()" ng-model="personal.userCity">
+        <option ng-repeat="pr in usCity"  ng-value="pr.id" ng-selected="pr.id==personal.userCity">{{pr.name}}</option>
     </select >
 
-    <select style="width: 100px; height: 40px" ng-change="findvillage()" ng-model="personal.userArea" name="userArea">
-        <option value="">请选择</option>
-        <option ng-repeat="re in usarea" ng-value="re.id" >{{re.name}}</option>
+    <select style="width: 100px; height: 40px" ng-click="findvillage()" ng-model="personal.userArea">
+        <option ng-repeat="re in usarea" ng-value="re.id" ng-selected="re.id==personal.userArea">{{re.name}}</option>
     </select>
 
-    <select style="width: 100px; height: 40px" id="userCity" ng-model="personal.censusVill" name="censusVill">
-        <option value="">请选择</option>
-        <option ng-repeat="al in allTown" ng-value="al.id" >{{al.name}}</option>
+    <select style="width: 100px; height: 40px" id="userCity" ng-model="personal.censusVill">
+        <option ng-repeat="al in allTown" ng-value="al.id" ng-selected="al.id==personal.censusVill">{{al.name}}</option>
     </select>
         <div id="main" style="width: 600px;height:400px;"></div>
 
 <div>
-</div>
-    </div>
-</div>
-</form>
     <table></table>
+
+</div>
+</div>
+</div>
 </body>
 </html>
