--- a/src/main/resources/templates/employing/EmployingMessage.html
+++ b/src/main/resources/templates/employing/EmployingMessage.html
@@ -243,6 +243,9 @@
                 }
 
             }
+            $scope.next=function () {
+                window.location.href="/residence/toResidenceInfo";
+            }
         })
     </script>
 
