修改流动人口管理界面

--- a/src/main/resources/templates/allMessage/AllMessage.html
+++ b/src/main/resources/templates/allMessage/AllMessage.html
@@ -286,12 +286,12 @@
     </div>
 
     <!--个人信息-->
-    <div style="width: 100%;height: 100%;">
+    <div style="width: 100%;height: 100%;float: left;">
         <div style="width: 90px;height: 750px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 350px;">个人信息</div>
         </div>
         <div style="float: left;margin-left: 50px;">
-            <table width="1000">
+            <table width="900">
                 <tr>
                     <td style="color: red">姓名:</td>
                     <td>
@@ -448,12 +448,12 @@
         </div>
     </div>
     <!--配偶信息-->
-    <div style="width: 100%;height: 37%;">
+    <div style="width: 100%;height: 37%;float: left;">
         <div style="width: 90px;height: 275px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 130px;">配偶信息</div>
         </div>
         <div style="float: left;margin-left: 50px;margin-top: 20px;">
-            <table width="1000">
+            <table width="900">
                 <tr>
                     <td>配偶姓名:</td>
                     <td>
@@ -508,12 +508,12 @@
         </div>
     </div>
     <!--同住家庭-->
-    <div style="width: 100%;height: 37%;">
+    <div style="width: 100%;height: 37%;float: left;">
         <div style="width: 90px;height: 275px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 130px;">同住家庭</div>
         </div>
         <div style="float: left;margin-left: 50px;margin-top: 20px;">
-            <table border="1" width="1000">
+            <table border="1" width="900">
                 <tr>
                     <td style="color: red;">关系</td>
                     <td style="color: red;">公民身份证号</td>
@@ -558,12 +558,12 @@
         </div>
     </div>
     <!--计生信息-->
-    <div style="width: 100%;height: 37%;">
+    <div style="width: 100%;height: 37%;float: left;">
         <div style="width: 90px;height: 275px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 130px;">计生信息</div>
         </div>
         <div style="float: left;margin-left: 50px;margin-top: 40px;">
-            <table width="1000">
+            <table width="900">
                 <tr>
                     <td>夫妻同行：</td>
                     <td>
@@ -653,12 +653,12 @@
         </div>
     </div>
     <!--就业信息-->
-    <div style="width: 100%;height: 67%;">
+    <div style="width: 100%;height: 67%;float: left;">
         <div style="width: 90px;height: 500px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 250px;">就业信息</div>
         </div>
         <div style="float: left;margin-left: 50px;margin-top: 50px;">
-            <table width="1000">
+            <table width="900">
                 <tr>
                     <td><div style="border: 1px solid black; width: 100px; height: 25px;"><center style="color: red;">用工单位名称:</center></div></td>
                     <td><input ng-model="employing.employingName" readonly="readonly"></td>
@@ -753,12 +753,12 @@
         </div>
     </div>
     <!--居住信息-->
-    <div style="width: 100%;height: 50%;">
+    <div style="width: 100%;height: 50%;float: left;">
         <div style="width: 90px;height: 390px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 200px;">居住信息</div>
         </div>
         <div style="float: left;margin-left: 50px;margin-top: 25px;">
-            <table width="1000">
+            <table width="900">
                 <tr>
                     <td><div style="border: 1px solid black; width: 100px; height: 25px;"><center style="color: red;">居住方式:</center></div></td>
                     <td>
