修改流动人口详情界面显示问题

--- a/src/main/resources/templates/allMessage/AllMessage.html
+++ b/src/main/resources/templates/allMessage/AllMessage.html
@@ -290,7 +290,7 @@
         <div style="width: 90px;height: 750px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 350px;">个人信息</div>
         </div>
-        <div style="float: left;margin-left: 50px;">
+        <div style="float: left;margin-left: 50px;width: 80%;">
             <table width="900">
                 <tr>
                     <td style="color: red">姓名:</td>
@@ -452,7 +452,7 @@
         <div style="width: 90px;height: 275px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 130px;">配偶信息</div>
         </div>
-        <div style="float: left;margin-left: 50px;margin-top: 20px;">
+        <div style="float: left;margin-left: 50px;margin-top: 20px;width: 80%;">
             <table width="900">
                 <tr>
                     <td>配偶姓名:</td>
@@ -512,7 +512,7 @@
         <div style="width: 90px;height: 275px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 130px;">同住家庭</div>
         </div>
-        <div style="float: left;margin-left: 50px;margin-top: 20px;">
+        <div style="float: left;margin-left: 50px;margin-top: 20px;width: 80%;">
             <table border="1" width="900">
                 <tr>
                     <td style="color: red;">关系</td>
@@ -562,7 +562,7 @@
         <div style="width: 90px;height: 275px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 130px;">计生信息</div>
         </div>
-        <div style="float: left;margin-left: 50px;margin-top: 40px;">
+        <div style="float: left;margin-left: 50px;margin-top: 40px;width: 80%;">
             <table width="900">
                 <tr>
                     <td>夫妻同行：</td>
@@ -657,7 +657,7 @@
         <div style="width: 90px;height: 500px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 250px;">就业信息</div>
         </div>
-        <div style="float: left;margin-left: 50px;margin-top: 50px;">
+        <div style="float: left;margin-left: 50px;margin-top: 50px;width: 80%;">
             <table width="900">
                 <tr>
                     <td><div style="border: 1px solid black; width: 100px; height: 25px;"><center style="color: red;">用工单位名称:</center></div></td>
@@ -757,7 +757,7 @@
         <div style="width: 90px;height: 390px;border: 2px solid black;float: left;margin-left: 1%;">
             <div align="center" style="margin-top: 200px;">居住信息</div>
         </div>
-        <div style="float: left;margin-left: 50px;margin-top: 25px;">
+        <div style="float: left;margin-left: 50px;margin-top: 25px;width: 80%;">
             <table width="900">
                 <tr>
                     <td><div style="border: 1px solid black; width: 100px; height: 25px;"><center style="color: red;">居住方式:</center></div></td>
